--- a/css/style.css
+++ b/css/style.css
@@ -731,7 +731,7 @@ input[type="radio"].visually-hidden{
 
 .services {
 	background-color: #f4f7f9;
-	margin-bottom: 75px;
+	margin-bottom: 77px;
 	padding-top: 62px;
 }
 
@@ -864,7 +864,7 @@ input[type="radio"].visually-hidden{
 .information {
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 86px;
+	margin-bottom: 85px;
 }
 
 
@@ -957,7 +957,7 @@ input[type="radio"].visually-hidden{
 .map-oll {
 	display: block;
 	margin-top: 32px;
-	margin-bottom: 34px;
+	margin-bottom: 37px;
 }
 
 .write {
@@ -1505,7 +1505,7 @@ input[type="radio"].visually-hidden{
 	padding: 0;
 	display: flex;
 	justify-content: space-between;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #E6E6E6;
 	position: relative;
 	list-style: none;
 }
@@ -1545,7 +1545,7 @@ input[type="radio"].visually-hidden{
 }
 
 .product-filter {
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #E6E6E6;
 }
 
 .filters-manufacturers-form {
