--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ input[type="radio"].visually-hidden{
 }
 
 .search-form input {
-	width: 270px;
+	width: 269px;
 	font-size: 17px;
 	background-color: #293449;
 	border: none;
@@ -77,8 +77,20 @@ input[type="radio"].visually-hidden{
 	width: 265px;
 }
 
-.search-form input[type="search"]::-webkit-input-placeholder {
-    color: #ffffff;
+.search-form input::-webkit-input-placeholder {
+    color: #fff;
+}
+
+.search-form input::-moz-placeholder {
+    color: #fff;
+}
+
+.search-form input:-moz-placeholder {
+    color: #fff;
+}
+
+.search-form input:-ms-input-placeholder {
+    color: #fff;
 }
 
 .search-form::before {
@@ -88,7 +100,7 @@ input[type="radio"].visually-hidden{
 	left: 18px;
 	width: 17px;
 	height: 17px;
-	background-image: url("../img/icon-search.svg");       /* !!!!!!!!!!!!!!!!!!! */
+	background-image: url("../img/icon-search.svg");
 	background-repeat: no-repeat;
 	background-position: 0 0;
 	filter: grayscale(1);
@@ -231,6 +243,7 @@ input[type="radio"].visually-hidden{
 }
 
 .telephone {
+	width: 145px;
 	margin: 0 0 4px 0;
 	max-width: 270px;
 	padding: 8px 50px 7px 70px;
@@ -252,7 +265,7 @@ input[type="radio"].visually-hidden{
 }
 
 .user-navigation {
-	margin: 0 0 0 70px;
+	margin: 0 0 0 69px;
 	padding: 0;
 	display: flex;
 	max-width: 280px;
@@ -370,7 +383,7 @@ input[type="radio"].visually-hidden{
 	color: #ffffff;
 }
 
-.catalog-goods-list li:nth-child(1) h3::before {
+.materials-item h3::before {
 	content: "";
 	position: absolute;
 	top: 31px;
@@ -382,7 +395,7 @@ input[type="radio"].visually-hidden{
 	background-position: 0 0;
 }
 
-.catalog-goods-list li:nth-child(2) h3::before {
+.tool-item h3::before {
 	content: "";
 	position: absolute;
 	top: 33px;
@@ -394,7 +407,7 @@ input[type="radio"].visually-hidden{
 	background-position: 0 0;
 }
 
-.catalog-goods-list li:nth-child(3) h3::before {
+.equipment-item h3::before {
 	content: "";
 	position: absolute;
 	top: 31px;
@@ -605,7 +618,7 @@ input[type="radio"].visually-hidden{
 	background-color: #ffc047;
 }
 
-.catalog-additional-services-list li:nth-child(1) h3::before {
+.discounts-item h3::before {
 	content: "";
 	position: absolute;
 	top: 26px;
@@ -617,7 +630,7 @@ input[type="radio"].visually-hidden{
 	background-position: 0 0;
 }
 
-.catalog-additional-services-list li:nth-child(2) h3::before {
+.delivery-item h3::before {
 	content: "";
 	position: absolute;
 	top: 32px;
@@ -1117,7 +1130,8 @@ input[type="radio"].visually-hidden{
 
 .modal-letter {
 	width: 620px;
-	left: 470px;
+	left: 50%;
+	margin-left: -310px;
 	top: 17%;
 	display: block;
 	box-shadow: 0px 20px 40px 0 rgba(0, 0, 0, 0.75);
@@ -1186,7 +1200,8 @@ input[type="radio"].visually-hidden{
 	color: #a9a9a9;
 	border: 2px solid #d7dcde;
 	margin-top: 10px;
-	padding: 12px 15px;
+	padding-left: 15px;
+	margin-right: 15px;
 	display: block;
 	width: 100%;
 	box-sizing: border-box;
@@ -1195,7 +1210,6 @@ input[type="radio"].visually-hidden{
 
 .modal-letter-wrapper input {
 	height: 38px;
-	line-height: 38px;
 }
 
 .modal-letter-wrapper textarea {
@@ -1981,15 +1995,15 @@ input[type="radio"].visually-hidden{
 	0% {
 		transform: translateY(-2000px);
 	}
-	
+
 	70% {
 		transform: translateY(30px);
 	}
-	
+
 	90% {
 		transform: translateY(-10px);
 	}
-	
+
 	100% {
 		transform: translateY(0);
 	}
@@ -2000,7 +2014,7 @@ input[type="radio"].visually-hidden{
 	100% {
 		transform: translateX(0);
 	}
-	
+
 	10%,
 	30%,
 	50%,
@@ -2008,7 +2022,7 @@ input[type="radio"].visually-hidden{
 	90% {
 		transform: translateX(-10px);
 	}
-	
+
 	20%,
 	40%,
 	60%,
